# talib-binding-node

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  build.sh  package.json  tslint.json
src/: generate.ts  ta_func_api.generated.json  ta_func_api.generated.ts  talib-binding.generated.cc  talib-binding.generated.d.ts  talib-binding.template.cc
ta-lib/: CHANGELOG.TXT  CMakeLists.txt  HISTORY.TXT  LICENSE_EXCEL.TXT  README.TXT  ta_func_api.xml  ta_func_api.xsd
ta-lib/dotnet/src/Core/: TA-Lib-Core.h
ta-lib/excel/: README.TXT  example.xls
ta-lib/excel/src/: ta-lib.sln  ta-lib.vcproj
ta-lib/excel/src/test/: ReadMe.txt  test_AD.xls  test_ADX.xls  test_AROON.xls  test_CHAIKIN.xls  test_CORREL.xls  test_HT.xls  test_KAMA.xls  test_LINEARREG.xls  test_MACD.xls  test_MAMA.xls  test_MF.xls  test_MINMAX.xls  test_STOCH.xls  test_T3.xls  test_TRIMA.xls  test_WILLR.xls  test_beta.xls  test_candlestick.xls  test_cci.xls  test_data.xls  test_dive.xlsx  test_mavp.xls  test_rsi.xls  test_sar_wilder.xls  test_trange.xls  test_ultosc.xls  test_vidya.xlsx
ta-lib/excel/src/xlw/: ERR_Macros.h  EXCEL32_API.h  LICENSE_XLW.TXT  XlfAbstractCmdDesc.cpp  XlfAbstractCmdDesc.h  XlfAbstractCmdDesc.inl  XlfArgDesc.cpp  XlfArgDesc.h  XlfArgDescList.cpp  XlfArgDescList.h  XlfCmdDesc.cpp  XlfCmdDesc.h  XlfExcel.cpp  XlfExcel.h  XlfExcel.inl  XlfException.cpp  XlfException.h  XlfException.inl  XlfFuncDesc.cpp  XlfFuncDesc.h  XlfOper.cpp  XlfOper.h  XlfOper.inl  XlfRef.cpp  XlfRef.h  XlfRef.inl  config.mgw.h  config.msvc.h  excel32.cpp  macros.h  port.h  pragmas.h  xlcall32.h  xlw.h
ta-lib/excel/src/xlw/trio/: .triodef.h.swp  example.c  strio.c  strio.h  trio.c  trio.h  triodef.h  trionan.c  trionan.h  triop.h
ta-lib/excel/src/xlw_for_talib/: Win32StreamBuf.cpp  Win32StreamBuf.h  Win32StreamBuf.inl  xlw_for_talib.cpp  xlw_for_talib.dep  xlw_for_talib.dsp  xlw_for_talib.mak  xlw_for_talib.vcproj  xlw_for_talib_reverse.mak
ta-lib/swig/make/perl/cygwin/g++/: Makefile
ta-lib/swig/make/perl/linux/g++/: Makefile
ta-lib/swig/make/python/linux/g++/: Makefile
ta-lib/swig/make/python/win32/vs2005/: Makefile
