
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.6)

PROJECT(ta-lib)

SET(TA_LIB_VERSION_MAJOR 0)
SET(TA_LIB_VERSION_MINOR 6)
SET(TA_LIB_VERSION_BUILD 0)
SET(TA_LIB_VERSION_EXTRA "dev")

SET(TA_LIB_VERSION_FULL "${TA_LIB_VERSION_MAJOR}.${TA_LIB_VERSION_MINOR}.${TA_LIB_VERSION_BUILD}")
IF(TA_LIB_VERSION_EXTRA)
	SET(TA_LIB_VERSION_FULL "${TA_LIB_VERSION_FULL}-${TA_LIB_VERSION_EXTRA}")
ENDIF(TA_LIB_VERSION_EXTRA)

OPTION(TA_LIB_ENABLE_C "Enable C library" ON)
OPTION(TA_LIB_ENABLE_GEN_CODE "Enable the gen_code utility (only needed by when adding new functions to the Ta-Lib)" OFF)
OPTION(TA_LIB_ENABLE_DOTNET "Enable .NET bindings" OFF)
OPTION(TA_LIB_ENABLE_EXCEL "Enable Excel bindings" OFF)
OPTION(TA_LIB_ENABLE_JAVA "Enable Java bindings" OFF)
OPTION(TA_LIB_ENABLE_SWIG "Enable SWIG bindings" OFF)
OPTION(TA_LIB_ENABLE_TESTS "Enable tests building" OFF)

INCLUDE(CheckIncludeFiles)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckTypeSize)
INCLUDE(CheckSymbolExists)
CHECK_INCLUDE_FILES(float.h HAVE_FLOAT_H)
CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(limits.h HAVE_LIMITS_H)
CHECK_INCLUDE_FILES(locale.h HAVE_LOCALE_H)
CHECK_INCLUDE_FILES(stddef.h HAVE_STDDEF_H)
CHECK_INCLUDE_FILES(stdint.h HAVE_STDINT_H)
CHECK_INCLUDE_FILES(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(string.h HAVE_STRING_H)
CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(wchar.h HAVE_WCHAR_H)
CHECK_INCLUDE_FILES(wctype.h HAVE_WCTYPE_H)
CHECK_FUNCTION_EXISTS(floor HAVE_FLOOR)
CHECK_FUNCTION_EXISTS(isascii HAVE_ISASCII)
CHECK_FUNCTION_EXISTS(localeconv HAVE_LOCALECONV)
CHECK_FUNCTION_EXISTS(mblen HAVE_MBLEN)
CHECK_FUNCTION_EXISTS(memmove HAVE_MEMMOVE)
CHECK_FUNCTION_EXISTS(memset HAVE_MEMSET)
CHECK_FUNCTION_EXISTS(modf HAVE_MODF)
CHECK_FUNCTION_EXISTS(pow HAVE_POW)
CHECK_FUNCTION_EXISTS(sqrt HAVE_SQRT)
CHECK_FUNCTION_EXISTS(strcasecmp HAVE_STRCASECMP)
CHECK_FUNCTION_EXISTS(strchr HAVE_STRCHR)
CHECK_FUNCTION_EXISTS(strerror HAVE_STRERROR)
CHECK_FUNCTION_EXISTS(strncasecmp HAVE_STRNCASECMP)
CHECK_FUNCTION_EXISTS(strrchr HAVE_STRRCHR)
CHECK_FUNCTION_EXISTS(strstr HAVE_STRSTR)
CHECK_FUNCTION_EXISTS(strtol HAVE_STRTOL)
CHECK_FUNCTION_EXISTS(strtoul HAVE_STRTOUL)
CHECK_FUNCTION_EXISTS(strcoll HAVE_STRCOLL)
CHECK_FUNCTION_EXISTS(strftime HAVE_STRFTIME)
CHECK_FUNCTION_EXISTS(vprintf HAVE_VPRINTF)
CHECK_TYPE_SIZE(ptrdiff_t SIZEOF_PTRDIFF_T)
IF(HAVE_SIZEOF_PTRDIFF_T)
	SET(HAVE_PTRDIFF_T 1)
ELSE()
	SET(HAVE_PTRDIFF_T 0)
ENDIF()
CHECK_TYPE_SIZE(size_t SIZEOF_SIZE_T)
IF(HAVE_SIZEOF_SIZE_T)
	SET(HAVE_SIZE_T 1)
ELSE()
	SET(HAVE_SIZE_T 0)
	SET(size_t "unsigned")
ENDIF()
CHECK_SYMBOL_EXISTS("struct tm" "sys/time.h" TM_IN_SYS_TIME)
CONFIGURE_FILE(${ta-lib_SOURCE_DIR}/c/include/ta_config.h.cmake ${ta-lib_SOURCE_DIR}/c/include/ta_config.h)





IF(TA_LIB_ENABLE_C)
	ADD_SUBDIRECTORY(c)
ENDIF(TA_LIB_ENABLE_C)

IF(TA_LIB_ENABLE_DOTNET)
	MESSAGE(SEND_ERROR "Not yet implemented")
	IF(!WIN32)
		MESSAGE(SEND_ERROR ".NET bindings can be generated only onder Windows at the times")
	ENDIF(WIN32)
	ADD_SUBDIRECTORY(dotnet)
ENDIF(TA_LIB_ENABLE_DOTNET)

IF(TA_LIB_ENABLE_EXCEL)
	MESSAGE(SEND_ERROR "Not yet implemented")
ENDIF(TA_LIB_ENABLE_EXCEL)

IF(TA_LIB_ENABLE_JAVA)
	MESSAGE(SEND_ERROR "Not yet implemented")
ENDIF(TA_LIB_ENABLE_JAVA)

IF(TA_LIB_ENABLE_SWIG)
	MESSAGE(SEND_ERROR "Not yet implemented")
ENDIF(TA_LIB_ENABLE_SWIG)

IF(TA_LIB_ENABLE_TESTS)
	MESSAGE(SEND_ERROR "Not yet implemented")
ENDIF(TA_LIB_ENABLE_TESTS)

IF(TA_LIB_ENABLE_GEN_CODE)
	MESSAGE(SEND_ERROR "Not yet implemented")
ENDIF(TA_LIB_ENABLE_GEN_CODE)

